dish delete method
